syntax = "proto3";

import "google/api/annotations.proto";
import "google/protobuf/wrappers.proto";
import "account.proto";
import "context.proto";
import "poll.proto";
import "status.proto";

option csharp_namespace = "Nextodon.Grpc";

service StatusApi
{    
  rpc CreateStatus (CreateStatusRequest) returns (Status)
  {
	option (google.api.http) = {
      post: "/api/v1/statuses"
      body: "*"
    };
  }

  rpc GetStatus (google.protobuf.StringValue) returns (Status)
  {
	option (google.api.http) = {
      get: "/api/v1/statuses/{value}"
    };
  }
  
  rpc DeleteStatus (google.protobuf.StringValue) returns (Status)
  {
	option (google.api.http) = {
      delete: "/api/v1/statuses/{value}"
    };
  }
  
  rpc GetRebloggedBy (GetRebloggedByRequest) returns (Accounts)
  {
	option (google.api.http) = {
      get: "/api/v1/statuses/{statusId}/reblogged_by"
      response_body: "data"
    };
  }
  
  rpc GetFavouritedBy (GetFavouritedByRequest) returns (Accounts)
  {
	option (google.api.http) = {
      get: "/api/v1/statuses/{statusId}/favourited_by"
      response_body: "data"
    };
  }

  rpc GetContext (google.protobuf.StringValue) returns (Context)
  {
	option (google.api.http) = {
      get: "/api/v1/statuses/{value}/context"
    };
  }

  rpc Favourite (google.protobuf.StringValue) returns (Status)
  {
	option (google.api.http) = {
      post: "/api/v1/statuses/{value}/favourite"
    };
  }
  
  rpc Unfavourite (google.protobuf.StringValue) returns (Status)
  {
	option (google.api.http) = {
      post: "/api/v1/statuses/{value}/unfavourite"
    };
  }

  rpc Bookmark (google.protobuf.StringValue) returns (Status)
  {
	option (google.api.http) = {
      post: "/api/v1/statuses/{value}/bookmark"
    };
  }
  
  rpc Unbookmark (google.protobuf.StringValue) returns (Status)
  {
	option (google.api.http) = {
      post: "/api/v1/statuses/{value}/unbookmark"
    };
  }

  rpc Mute (google.protobuf.StringValue) returns (Status)
  {
	option (google.api.http) = {
      post: "/api/v1/statuses/{value}/mute"
    };
  }
  
  rpc Unmute (google.protobuf.StringValue) returns (Status)
  {
	option (google.api.http) = {
      post: "/api/v1/statuses/{value}/unmute"
    };
  }

  rpc Pin (google.protobuf.StringValue) returns (Status)
  {
	option (google.api.http) = {
      post: "/api/v1/statuses/{value}/pin"
    };
  }
  
  rpc Unpin (google.protobuf.StringValue) returns (Status)
  {
	option (google.api.http) = {
      post: "/api/v1/statuses/{value}/unpin"
    };
  }

  rpc Reblog (ReblogRequest) returns (Status)
  {
	option (google.api.http) = {
      post: "/api/v1/statuses/{statusId}/reblog"
      body: "*"
    };
  }
  
  rpc Unreblog (google.protobuf.StringValue) returns (Status)
  {
	option (google.api.http) = {
      post: "/api/v1/statuses/{value}/unreblog"
    };
  }
}

message GetRebloggedByRequest
{
    string statusId = 1;

    // Internal parameter. Use HTTP Link header for pagination.
    optional string max_id = 2;

    // Internal parameter. Use HTTP Link header for pagination.
    optional string since_id = 3;
    
    // Internal parameter. Use HTTP Link header for pagination.
    optional string min_id = 4;
    
    // Maximum number of results to return. Defaults to 40 accounts. Max 80 accounts.
    optional uint32 limit = 5; 
}

message GetFavouritedByRequest
{
    string statusId = 1;

    // Internal parameter. Use HTTP Link header for pagination.
    optional string max_id = 2;

    // Internal parameter. Use HTTP Link header for pagination.
    optional string since_id = 3;
    
    // Internal parameter. Use HTTP Link header for pagination.
    optional string min_id = 4;
    
    // Maximum number of results to return. Defaults to 40 accounts. Max 80 accounts.
    optional uint32 limit = 5; 
}

message ReblogRequest
{
    string statusId = 1;
    optional Visibility visibility = 2;
}


message CreateStatusRequest
{
    Visibility visibility = 1;
    repeated string mediaIds = 2 [json_name="media_ids"];
    optional Poll poll = 3;
    bool sensitive = 4;
    string status = 5;
    optional string inReplyToId = 6 [json_name="in_reply_to_id"];
    optional string spoilerText = 7 [json_name="spoiler_text"];
    optional string language = 8;


    message Poll
    {
        uint32 expiresIn = 1 [json_name="expires_in"];
        bool hideTotals = 2 [json_name="hide_totals"];
        PollKind kind = 3;
        repeated string options = 4;
    }
}
